// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyboardKeysGroup snapshots should render with couple keys 1`] = `
<DocumentFragment>
    ⌥⌘⇧A
</DocumentFragment>
`;

exports[`KeyboardKeysGroup snapshots should render with couple keys and optional 1`] = `
<DocumentFragment>
   ⌥⌘⇧Aor⌥⌘⇧A
</DocumentFragment>
`;

exports[`KeyboardKeysGroup snapshots should render with one key 1`] = `
<DocumentFragment>
    A
</DocumentFragment>
`;

exports[`KeyboardKeysGroup snapshots should render with title 1`] = `
<DocumentFragment>
  title  A
</DocumentFragment>
`;
